<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="TITLE_DATA_UPDATE_NOTIF_TITLE">Greece\'s Phonebook</string>
    <string name="TITLE_DATA_UPDATED">Data has been updated</string>
    <string name="TITLE_GREECE_VISITOR">Greece Visitor\'s</string>
    <string name="TITLE_PHONEBOOK">PhoneBook</string>
    <string name="TITLE_EDIT_ENTRY">Edit Entry</string>
    <string name="TITLE_ADD_ENTRY">Add Entry</string>
    <string name="ACTION_SETTINGS">Settings</string>
    <string name="ACTION_SYNCH">Update Data</string>
    <string name="LBL_VISIT_BYTECODE">Visit ByteCode</string>
    <string name="LBL_POLICE">Police</string>
    <string name="LBL_HELPLINES">Helplines</string>
    <string name="LBL_PUBLIC_SERVCES">Services</string>
    <string name="LBL_EMBASSIES">Embassies</string>
    <string name="LBL_TRANSPORTATION">Transport</string>
    <string name="LBL_INFORMATION">General Info</string>
    <string name="LBL_EMERGENCY">Emergency</string>
    <string name="LBL_HEALTHCARE">Healthcare</string>
    <string name="LBL_112">Call 112</string>
    <string name="LBL_SETTINGS">Setrings</string>
    <string name="LBL_CHECK_DATA_NOW">Check for new data now</string>
    <string name="LBL_RELOAD_DATA_NOW">Reload data now</string>
    <string name="LBL_SEND_EMAIL">Contact Bytecode</string>
    <string name="LBL_CANCEL">Cancel</string>
    <string name="LBL_OKAY">OKAY</string>
    <string name="LBL_SAVE">Save</string>
    <string name="TXT_CAT_DATA_SYNCH">Data Updates</string>
    <string name="TXT_CAT_BYTECODE">ByteCode.gr</string>
    <string name="TXT_TITLE_AUTO_DATA_CHECK">Automatic data updates</string>
    <string name="TXT_SUMMARY_AUTO_DATA_CHECK">Update data automatically when internet access is available</string>
    <string name="TXT_TITLE_AUTO_DATA_CHECK_INTERVAL">Check Frequency</string>
    <string name="TXT_SUMMARY_AUTO_DATA_CHECK_INTERVAL">Check for data updates every %s days</string>
    <string name="TXT_ACTIVE">Active</string>
    <string name="TXT_INACTIVE">Inactive</string>
    <string name="TXT_NEVER_CHECKED">Never checked</string>
    <string name="TXT_NEVER_UPDATED">Never updated</string>
    <string name="TXT_SEND_US_AN_EMAIL">Send us your feedback</string>
    <string name="TXT_BYTECODE_EMAIL">phonebook@bytecode.gr</string>
    <string name="TXT_BYTECODE_URL">http://bytecode.gr</string>
    <string name="TXT_SEND_EMAIL_SUBJ">[PhoneBook App] Message from#8230;</string>
    <string name="TXT_VISIT_BYTECODE">Browse our website</string>
    <string name="TITLE_SEND_EMAIL_CHOOSER">Contact ByteCode.gr</string>
    <string name="ΤΧΤ_EVERY_DAY">Daily</string>
    <string name="ΤΧΤ_EVERY_7_DAYS">Weekly</string>
    <string name="ΤΧΤ_EVERY_30_DAYS">Monthly</string>
    <string name="ΤΧΤ_EVERY_90_DAYS">Quarterly</string>
    <string name="TXT_TITLE_LAST_DATA_UPDATE">Last update</string>
    <string name="TXT_DATA_UPDATED">Phonebook data has been updated to the latest version</string>
    <string name="TXT_UPDATE_STARTED">Update process has started</string>
    <string name="TXT_CLOSE">Close</string>
    <string name="TXT_UPDATE_NOW">Update now</string>
    <string name="TXT_UPDATE_ANYWAY">Update anyway</string>
    <string name="TXT_NEW_DATA_FOUND">New data found on server</string>
    <string name="TXT_DATA_IS_UP_TO_DATE">Data is up to date.</string>
    <string name="NUM_DEFAULT_CALL_NUMBER">112</string>
    <string name="TXT_CAT_FEATURES">Experimental features</string>
    <string name="TXT_HOVER_CALL">Hover display for emergency call</string>
    <string name="TITLE_HOVER_CALL">Hover Call</string>
    <string name="TXT_ADD">Add</string>
    <string name="TXT_TIP_ORGANIZATION_NAME">Unique name of the entry</string>
    <string name="TXT_NAME">Name</string>
    <string name="TXT_PHONE_NUMBER">Phone Number</string>
    <string name="TXT_TIP_PHONE_NUMBER">Phone number of the entry</string>
    <string name="TXT_WEBSITE_ADDRESS">Website Address</string>
    <string name="TXT_TIP_WEBSITE_ADDRESS">Website (optional)</string>
    <string name="TXT_SHARE_THIS_ENTRY">Share entry with other users</string>
    <string name="TXT_EDIT">Edit</string>
    <string name="TXT_DELETE">Delete</string>
    <string name="TXT_MANAGE_ENTRY">Manage entry</string>
    <string name="TXT_ENTRY_REMOVED">Entry removed</string>
    <string name="TXT_HTTP_PREFIX">http://</string>
    <string name="TXT_CUSTOM">User defined</string>
    <string name="TXT_EMPTY_ENTRY_LIST_TIP">Tap the plus symbol on the menu to add a new entry</string>
    <string name="TXT_UPDATE_CATEGORY">Update Category</string>
    <string name="ΤΧΤ_EMPTY"></string>
    <string name="ΤΧΤ_BYTECODE">Useful apps by ByteCode.gr</string>
    <string name="TXT_APPNAME">Greece PhoneBook</string>
    <string name="TXT_SHORT">ΤΧΤ_SHORT</string>
    <string name="TXT_LONG">asdasdasdasdad asd asdasdasd</string>
    <string name="ERROR_NOT_VALID_WEB_ADDRESS">This is not a valid Web Address</string>
    <string name="ERROR_REQUIRED_FIELD">Required data</string>
    <string name="ERROR_NO_NETWORK">Internet connection is not available at this time</string>

</resources>