<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/entry_list_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_toLeftOf="@+id/icon_container"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/label"
            style="@style/entry_list_item_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/TXT_SHORT" >
        </TextView>

        <TextView
            android:id="@+id/number"
            style="@style/entry_list_item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/TXT_LONG" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/net_icon"
            style="@style/entry_list_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ΤΧΤ_EMPTY"
            android:src="@drawable/ic_net"
            android:visibility="invisible" >
        </ImageView>

        <View
            android:id="@+id/sep_icon"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#80D0D0D0"
            android:visibility="invisible" >
        </View>

        <ImageView
            android:id="@+id/phone_icon"
            style="@style/entry_list_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ΤΧΤ_EMPTY"
            android:src="@drawable/ic_phone" >
        </ImageView>
    </LinearLayout>

</RelativeLayout>